Tamaños de textos y ajustes en detalle

--- a/src/pages/EmergenciasDetail/Emergencias.css
+++ b/src/pages/EmergenciasDetail/Emergencias.css
@@ -23,3 +23,7 @@ slick-prev:before, .slick-next:before {
 .justify-end {
   justify-content: center !important;
 }
+
+.textdetail{
+  padding-bottom: 15px;
+}
